# Block-2-Web

./: Dockerfile  HW4.py  HW6.py  Homework 1_1  Homework 1_1.py  Homework 1_2  Homework 1_2.py  Homework 5.py  README.md  pyproject.toml  sort_async.py  sort_manager.py  sort_mt.py
hw7/: client.py  server.py
