[tool.poetry]
name = "sort_manager"
version = "0.1"
description = "This program sort your folder"
authors = ["Your Name <you@example.com>"]
license = "free"

[tool.poetry.dependencies]
python = "3.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
